objects/User.object
<CustomObject>
    <fields>
        <fullName>ADDomainUserLower__c</fullName>
        <formula>LOWER( ADDomainUser__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AD Domain User(lower)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDomainUser__c</fullName>
        <description>Active Directory user name for users imported from AD</description>
        <inlineHelpText>Active Directory user name</inlineHelpText>
        <label>AD Domain User</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AD_External_User_Expiration_Date__c</fullName>
        <description>Value of AD Attribut Expiration date</description>
        <inlineHelpText>This field is used to indicate the expiration date of a none Pernod Ricard employee</inlineHelpText>
        <label>AD External User Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AD_External_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value of AD Attribut ‘44’ = &quot;Yes&quot; if external user</description>
        <inlineHelpText>This field is used to indicate if user a non Pernod Ricard employee</inlineHelpText>
        <label>AD External User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_Active_Directory_User_ID__c</fullName>
        <label>ASI Active Directory User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_CRM_Market__c</fullName>
        <label>ASI Luxury/Brand CRM Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Receive_Approval_Request__c</fullName>
        <label>Receive Approval Request Emails(Files)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>If I am an approver or delegated approver</fullName>
                    <default>true</default>
                    <label>If I am an approver or delegated approver</label>
                </value>
                <value>
                    <fullName>Only if I am an approver</fullName>
                </value>
                <value>
                    <fullName>Only if I am a delegated approver</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Prefix__c</fullName>
        <label>Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Dashboard_Group__c</fullName>
        <label>CRM Dashboard Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GMgr-C</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>GMgr-HQ</fullName>
                </value>
                <value>
                    <fullName>AMgr</fullName>
                </value>
                <value>
                    <fullName>AMgr-C</fullName>
                </value>
                <value>
                    <fullName>Mgr</fullName>
                </value>
                <value>
                    <fullName>GMgr</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Address_Local__c</fullName>
        <label>Address (Local)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Department_Local__c</fullName>
        <label>Department (Local)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Name_Local__c</fullName>
        <label>Name (Local)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Phone_Local__c</fullName>
        <label>Phone (Local)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Customer_Category_Code_2__c</fullName>
        <label>Customer Category Code 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LP</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>WE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <label>CRM Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CN-Admin</fullName>
                </value>
                <value>
                    <fullName>CN-GC</fullName>
                </value>
                <value>
                    <fullName>CN-GE</fullName>
                </value>
                <value>
                    <fullName>CN-GN</fullName>
                </value>
                <value>
                    <fullName>CN-GNW</fullName>
                </value>
                <value>
                    <fullName>CN-GS</fullName>
                </value>
                <value>
                    <fullName>CN-HQ</fullName>
                </value>
                <value>
                    <fullName>CN-IHBR</fullName>
                </value>
                <value>
                    <fullName>CN-Premium</fullName>
                </value>
                <value>
                    <fullName>TH-Admin</fullName>
                </value>
                <value>
                    <fullName>TH-ALL</fullName>
                </value>
                <value>
                    <fullName>TH-CorpAff</fullName>
                </value>
                <value>
                    <fullName>TH-Finance</fullName>
                </value>
                <value>
                    <fullName>TH-HR</fullName>
                </value>
                <value>
                    <fullName>TH-Marketing</fullName>
                </value>
                <value>
                    <fullName>TH-Sales-OFF</fullName>
                </value>
                <value>
                    <fullName>TH-Sales-ON</fullName>
                </value>
                <value>
                    <fullName>CN-GW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Team__c</fullName>
        <label>ASI CRM Sales Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BJ IHBR-Bar &amp; Restaurant</fullName>
                </value>
                <value>
                    <fullName>BJ IHBR-Hotel</fullName>
                </value>
                <value>
                    <fullName>Central-Mac on PG</fullName>
                </value>
                <value>
                    <fullName>Central-MOT PG</fullName>
                </value>
                <value>
                    <fullName>Central-Others</fullName>
                </value>
                <value>
                    <fullName>Central-PG</fullName>
                </value>
                <value>
                    <fullName>Central-PG01</fullName>
                </value>
                <value>
                    <fullName>Central-TMK</fullName>
                </value>
                <value>
                    <fullName>Central-TMK01</fullName>
                </value>
                <value>
                    <fullName>Central-VIP</fullName>
                </value>
                <value>
                    <fullName>Central-WS</fullName>
                </value>
                <value>
                    <fullName>Contractor-Central</fullName>
                </value>
                <value>
                    <fullName>Contractor-East</fullName>
                </value>
                <value>
                    <fullName>Contractor-North</fullName>
                </value>
                <value>
                    <fullName>Contractor-Premium OFF</fullName>
                </value>
                <value>
                    <fullName>Contractor-Premium ON</fullName>
                </value>
                <value>
                    <fullName>Contractor-South</fullName>
                </value>
                <value>
                    <fullName>Contractor-West</fullName>
                </value>
                <value>
                    <fullName>DBR/KUNPENG</fullName>
                </value>
                <value>
                    <fullName>East-Mac on PG</fullName>
                </value>
                <value>
                    <fullName>East-MOT PG</fullName>
                </value>
                <value>
                    <fullName>East-Others</fullName>
                </value>
                <value>
                    <fullName>East-PG01</fullName>
                </value>
                <value>
                    <fullName>East-TMK</fullName>
                </value>
                <value>
                    <fullName>East-TMK01</fullName>
                </value>
                <value>
                    <fullName>East-VIP</fullName>
                </value>
                <value>
                    <fullName>East-WS</fullName>
                </value>
                <value>
                    <fullName>HQ-National Contract</fullName>
                </value>
                <value>
                    <fullName>HQ-Others</fullName>
                </value>
                <value>
                    <fullName>HQ-PG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_User_App_Homepage_Type__c</fullName>
        <label>ASI User App Homepage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>area manager</fullName>
                </value>
                <value>
                    <fullName>brand ambassador</fullName>
                </value>
                <value>
                    <fullName>off</fullName>
                </value>
                <value>
                    <fullName>on</fullName>
                </value>
                <value>
                    <fullName>WS manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_User_Group__c</fullName>
        <label>User Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Company_Code__c</fullName>
        <label>ASI Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>780</fullName>
                </value>
                <value>
                    <fullName>778</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_Company_Name__c</fullName>
        <label>ASI Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Default_Order_Customer__c</fullName>
        <label>ASI Default Order Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Default_Order_Ship_To__c</fullName>
        <label>ASI Default Order Ship To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Department__c</fullName>
        <label>ASI Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Department__c</fullName>
        <label>ASI GnH Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Sales_Director_Approver__c</fullName>
        <label>Sales Director Approver</label>
        <relationshipName>ASI_HK_CRM_Sales_Director_Approver</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>ASI_JP_TnE_Department_Category_Code__c</fullName>
        <label>ASI TnE JP Department Category Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1D</fullName>
                </value>
                <value>
                    <fullName>2D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Commission_Code__c</fullName>
        <externalId>true</externalId>
        <label>Commission Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Salesman_Code__c</fullName>
        <label>Salesman Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_User_Branch_Code__c</fullName>
        <label>User Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_User_Branch_Name__c</fullName>
        <label>User Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_User_Region_Code__c</fullName>
        <label>User Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_User_Region_Name__c</fullName>
        <label>User Region Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KR_OBIEE_Domain__c</fullName>
        <label>ASI KR OBIEE Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Line_Manager__c</fullName>
        <label>ASI Line Manager</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Brand_Manager__c</fullName>
        <description>For KR MFM, it allows to have additional approver for temporary staffs.</description>
        <label>ASI MFM Brand Manager</label>
        <relationshipName>ASI_MFM_Marketing_Intern</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Bypass_Callouts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASI MFM Bypass Callouts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Staff_No__c</fullName>
        <label>Staff No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Country__c</fullName>
        <label>ASI MFM Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TW</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>GF</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>RM</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>PH</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>VN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Department__c</fullName>
        <label>ASI MFM Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MKT</fullName>
                </value>
                <value>
                    <fullName>TMKT</fullName>
                </value>
                <value>
                    <fullName>Sales On premise BKK</fullName>
                </value>
                <value>
                    <fullName>Sales On premise North</fullName>
                </value>
                <value>
                    <fullName>Sales On premise South</fullName>
                </value>
                <value>
                    <fullName>Sales Off premise BKK</fullName>
                </value>
                <value>
                    <fullName>Sales Off premise North</fullName>
                </value>
                <value>
                    <fullName>Sales Off premise South</fullName>
                </value>
                <value>
                    <fullName>Sales Modern Trade</fullName>
                </value>
                <value>
                    <fullName>Premium Brands</fullName>
                </value>
                <value>
                    <fullName>Values Brands</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Trade Marketing</fullName>
                </value>
                <value>
                    <fullName>Head of Marketing</fullName>
                </value>
                <value>
                    <fullName>Off-Trade</fullName>
                </value>
                <value>
                    <fullName>Duty Free</fullName>
                </value>
                <value>
                    <fullName>Provincial</fullName>
                </value>
                <value>
                    <fullName>Head of Sales</fullName>
                </value>
                <value>
                    <fullName>On-Trade</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Sales (Domestic &amp; International Markets) - NBD</fullName>
                </value>
                <value>
                    <fullName>Sales (Domestic &amp; International Markets) - OnTrade</fullName>
                </value>
                <value>
                    <fullName>Sales (Domestic &amp; International Markets) - SIP</fullName>
                </value>
                <value>
                    <fullName>Sales (Domestic &amp; International Markets) - TMKT</fullName>
                </value>
                <value>
                    <fullName>Sales (Domestic &amp; International Markets) - WS</fullName>
                </value>
                <value>
                    <fullName>Supply Chain / Logistics / Customer Service</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Systems &amp; Technology</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales (Domestic &amp; International Markets)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Direct_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Permission_Sets__c</fullName>
        <label>Permission Sets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASI_MFM_PO_Receipt_Closing_Process</fullName>
                </value>
                <value>
                    <fullName>ASI_MFM_SG_SetPaymentToDraft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Team__c</fullName>
        <label>ASI MFM Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NTMK</fullName>
                </value>
                <value>
                    <fullName>MMPJ</fullName>
                </value>
                <value>
                    <fullName>Whiskies</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
                <value>
                    <fullName>Innovation and White Spirits</fullName>
                </value>
                <value>
                    <fullName>Luxe</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>OFF</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Cognac and White spirits</fullName>
                </value>
                <value>
                    <fullName>Merchandising</fullName>
                </value>
                <value>
                    <fullName>Bar&amp;Restaurant</fullName>
                </value>
                <value>
                    <fullName>KTV</fullName>
                </value>
                <value>
                    <fullName>IHBR</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>South West</fullName>
                </value>
                <value>
                    <fullName>IT-PC</fullName>
                </value>
                <value>
                    <fullName>IT-HQ</fullName>
                </value>
                <value>
                    <fullName>Brand Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Trade Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_OBIEE_Domain__c</fullName>
        <defaultValue>&quot;8621&quot;</defaultValue>
        <label>ASI OBIEE Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Outlet_Name__c</fullName>
        <label>ASI Outlet Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Department_Code__c</fullName>
        <label>ASI TnE Department Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Employee_Type__c</fullName>
        <label>ASI TnE Employee Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Monthly_Allowance__c</fullName>
        <label>ASI TnE Monthly Allowance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sub_Ledger__c</fullName>
        <label>ASI TnE Sub-Ledger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Indicator__c</fullName>
        <label>ASI eForm Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoFreeze__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be used to flag users who will be automatically frozen</description>
        <label>AutoFreeze</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autofollow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automation of autofollow</description>
        <label>Autofollow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account_ID__c</fullName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account__c</fullName>
        <formula>if(IsBlank(Contact.Account.Name), BMCServiceDesk__Account_Name__c, Contact.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssetManagementView__c</fullName>
        <label>Asset Management View</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hidden</fullName>
                </value>
                <value>
                    <fullName>Read-Only</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Update and Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssignRemedyforceLic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box to assign Remedyforce seat license.</inlineHelpText>
        <label>Assign Remedyforce License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Broadcast_ticker_speed__c</fullName>
        <inlineHelpText>Enter a value between 1 and 10,where 1=Slow and 10=Fast</inlineHelpText>
        <label>Broadcast ticker speed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                    <default>true</default>
                    <label>5</label>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Building__c</fullName>
        <label>Building</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Business_Hours_ID__c</fullName>
        <label>Business Hours ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Business_Hours__c</fullName>
        <inlineHelpText>Select the shift in which the staff member works.</inlineHelpText>
        <label>Business Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CIManagementView__c</fullName>
        <label>CI Management View</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hidden</fullName>
                </value>
                <value>
                    <fullName>Read-Only</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Update and Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ChatStatus__c</fullName>
        <inlineHelpText>Select the chat status.</inlineHelpText>
        <label>Chat Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContactId__c</fullName>
        <label>ContactId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EnableChat__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box to enable the user to chat.</inlineHelpText>
        <label>Enable Chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Extension__c</fullName>
        <formula>Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FPLoginID__c</fullName>
        <inlineHelpText>This field stores the Login ID of the validated BMC FootPrints Asset Core user.</inlineHelpText>
        <label>BCM Login ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FP_Login_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCM Login Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ImageName__c</fullName>
        <label>Image Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsOutOfOffice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsRemedyforceAdministrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsStaffUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceDesk Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastAvailableTime__c</fullName>
        <inlineHelpText>Displays the last time when the user Status was Available.</inlineHelpText>
        <label>Last Available Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastChatEndTime__c</fullName>
        <inlineHelpText>Displays the time when the last chat ended.</inlineHelpText>
        <label>Last Chat End Time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>